force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <label>Location (C)</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Location Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>