force-app/main/default/objects/Location__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>